--- a/app/views/home/_employer.pdf.erb
+++ b/app/views/home/_employer.pdf.erb
@@ -5,4 +5,4 @@
     {\it <%= lesc employer.position_part(2) %>} \>{\bf <%= employer.country %>}
    \end{tabbing}\vspace{-.2in}      % suppress blank line after tabbing
 
-<%= render :partial => "task", :collection => employer.tasks %>
+<%= render :partial => "task", :collection => employer.tasks.where(:enabled => true) %>
