Indentation for open source entries

--- a/app/views/home/_opensource_section.pdf.erb
+++ b/app/views/home/_opensource_section.pdf.erb
@@ -1,5 +1,5 @@
 <% if collection.length > 0 %>
-  \hspace{-0.3in} {\bf <%= title %>} \\
+  \hspace*{-0.4in} {\bf <%= title %>} \\
   <%= render :partial => "opensource", :collection => collection %>
   \vspace{-0.2in} 
 <% end %>
