--- a/app/views/home/_opensource.pdf.erb
+++ b/app/views/home/_opensource.pdf.erb
@@ -1,2 +1,2 @@
-{\bf <%= lesc opensource.name %>}. <%= lesc opensource.description %>
+\hspace*{-0.2in} {\bf <%= lesc opensource.name %>}. <%= lesc opensource.description %>
 <% unless opensource.link.blank? %>[\url{<%= lesc opensource.link %>}] <% end %>\\
