Printing last updated on last page footer

--- a/app/views/home/print.pdf.erb
+++ b/app/views/home/print.pdf.erb
@@ -62,4 +62,8 @@
 \section{REFERENCES \& RECOMMENDATIONS}
 References furnished upon request. Please check recommendations for me on LinkedIn.
 
+\cfoot{
+Last updated: <%= @last_updated_at %> \hspace{1in} Generated: <%= @generated_at %>
+}
+
 \end{resume}
