re-enabling publications, and adding proper double quotations.

--- a/app/views/home/print.pdf.erb
+++ b/app/views/home/print.pdf.erb
@@ -47,8 +47,8 @@
 \vspace{0.1in} 
 <%= render :partial => "education", :collection => @educations %>
  
-%\section{PUBLICATIONS}
-%<%= render :partial => "publication", :collection => @publications %>
+\section{PUBLICATIONS}
+<%= render :partial => "publication", :collection => @publications %>
 
 \section{EXTRACURRICULAR ACTIVIES} 
 \begin{itemize}
