--- a/app/views/home/_publication.pdf.erb
+++ b/app/views/home/_publication.pdf.erb
@@ -1,1 +1,1 @@
-{\bf [<%= publication.year %>]} <%= lesc publication.authors %>, "{\bf <%= lesc publication.title %>}". <%= lesc publication.venue %>\\
+{\bf [<%= publication.year %>]} <%= lesc publication.authors %>, ``{\bf <%= lesc publication.title %>}''. <%= lesc publication.venue %>\\
