--- a/app/views/home/print.pdf.erb
+++ b/app/views/home/print.pdf.erb
@@ -63,7 +63,7 @@
 References furnished upon request. Please check recommendations for me on LinkedIn.
 
 \cfoot{
-Last updated: <%= @last_updated_at %> \hspace{1in} Generated: <%= @generated_at %>
+Last updated: <%= @last_updated_at %>
 }
 
 \end{resume}
