--- a/app/views/home/_employer.pdf.erb
+++ b/app/views/home/_employer.pdf.erb
@@ -5,4 +5,4 @@
     {\it <%= lesc employer.position_part(2) %>}
    \end{tabbing}\vspace{-.2in}      % suppress blank line after tabbing
 
-<%= render :partial => "task", :collection => employer.tasks.where(:enabled => true).order("updated_at desc") %>
+<%= render :partial => "home/task", :collection => employer.tasks.where(:enabled => true).order("updated_at desc") %>
