--- a/app/views/home/_opensource_section.pdf.erb
+++ b/app/views/home/_opensource_section.pdf.erb
@@ -1,5 +1,5 @@
 <% if collection.length > 0 %>
   \hspace*{-0.4in} {\bf <%= title %>} \\
-  <%= render :partial => "opensource", :collection => collection %>
+  <%= render :partial => "home/opensource", :collection => collection %>
   \vspace{-0.2in} 
 <% end %>
