--- a/app/views/home/print.pdf.erb
+++ b/app/views/home/print.pdf.erb
@@ -23,44 +23,44 @@
 
 <% if @opensources1.length + @opensources2.length > 0 %>
   \section{OPEN SOURCE CONTRIBUTIONS}
-  <%= render :partial => "opensource_section", :locals =>
+  <%= render :partial => "home/opensource_section", :locals =>
     {:collection => @opensources1, :title => "Authored"} %>
-  <%= render :partial => "opensource_section", :locals =>
+  <%= render :partial => "home/opensource_section", :locals =>
     {:collection => @opensources2, :title => "Contributed to"} %>
 <% end %>
 
 <% if @employers.length > 0 %>
 \section{PROFESSIONAL EXPERIENCE}
 \vspace{0.2in}	
-<%= render :partial => "employer", :collection => @employers %>
+<%= render :partial => "home/employer", :collection => @employers %>
 <% end %>
 
 <% if @freelancetasks.length > 0 %>
 \section{FREELANCING EXPERIENCE}
-<%= render :partial => "task", :collection => @freelancetasks %>
+<%= render :partial => "home/task", :collection => @freelancetasks %>
 <% end %>
 
 <% if @educations.length > 0 %>
 \section{EDUCATION}          
 \vspace{0.1in} 
-<%= render :partial => "education", :collection => @educations %>
+<%= render :partial => "home/education", :collection => @educations %>
 <% end %>
 
 <% if @publications.length > 0 %>
 \section{PUBLICATIONS}
-<%= render :partial => "publication", :collection => @publications %>
+<%= render :partial => "home/publication", :collection => @publications %>
 <% end %>
 
 <% if @activities.length > 0 %>
 \section{EXTRACURRICULAR ACTIVIES} 
 \begin{itemize}
-<%= render :partial => "activity", :collection => @activities %>
+<%= render :partial => "home/activity", :collection => @activities %>
 \end{itemize}
 <% end %>
 
 <% if @personalinfo.length > 0 %>
 \section{PERSONAL INFORMATION}
-<%= render :partial => "personalinfo", :collection => @personalinfo %>
+<%= render :partial => "home/personalinfo", :collection => @personalinfo %>
 <% end %>
  
 \cfoot{
